# kildeutgivelser

./: .editorconfig  .env.default  .gitignore  .gitmodules  Dockerfile.api  Dockerfile.api_proxy  Dockerfile.jetty  Dockerfile.mysql  Dockerfile.pgsql  Dockerfile.svn  Dockerfile.svn_sync  Dockerfile.tei_tools  Dockerfile.web  README.md  api_gitconfig  api_proxy.conf  build.sh  docker-compose.jetty.yml  docker-compose.pgsql.yml  docker-compose.search.yml  docker-compose.yml  run_publisher.sh
api/: 10-envsubst-on-templates.sh  credentials.template  docker-entrypoint.sh  uwsgi.ini
api/config_templates/: digital_editions.yml.template  security.yml.template
api_config/: digital_editions.yml  security.yml
db/: 01-project.sql  01-structure.sql  02-project.sql
edith/WEB-INF/classes/: app.properties
mysql_db/: 01-structure.sql
nginx.conf.d/: api_proxy.conf  app.conf  default.conf
search/config/: logstash.yml
search/pipeline/: logstash.conf  logstash_stattholder.conf
svn/: dav_svn.conf  edithusers
svn_sync/: .gitignore  11-envsubst-git-credentials.sh  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
svn_sync/app/: main.py
tei_tools/: Dockerfile  default.conf  environment.prod.ts  environment.ts
web/: .gitignore  Dockerfile  README.md  config.json  default.conf  gzip.conf  index.html  nginx.conf  nginx.default
web/assets/custom_css/: custom.css
web/assets/i18n/: no.json
web/project_files_web/: config.json  index.html
web/project_files_web/assets/i18n/: no.json
web/public/: config.json  index.html
web/public/templates/: template.html
(+3 files in other folders)
